--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install dependencies
         run: npm i
       - name: Static HTML export with Nuxt
-        run: npm run parcel build src/index.html
+        run: npx parcel build src/index.html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
