--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -4,6 +4,11 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   # Build job
@@ -18,7 +23,7 @@ jobs:
           node-version: "20"
       - name: Install dependencies
         run: npm i
-      - name: Parcel Build
+      - name: Static HTML export Parcel
         run: npx parcel build src/index.html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
